kubernetes/postgre-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: postgres:16-alpine
          volumeMount:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          PersistentVolumeClaim:
            claimName: postgres-pvc
