kubernetes/proxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy
          image: nginx:stable
          volumeMount:
            name: nginx-conf
            mountPath: /etc/nginx/nginx.conf
            readOnly: True
      volumes:
        - name: nginx-conf
          hostPath:
            path: ../nginx/nginx.conf
            type: File
