kubernetes/postgre-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgre-service
spec:
  selector:
    labels:
      app: postgres
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
